# sopel-twitter

./: MANIFEST.in  NEWS  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
sopel_modules/twitter/: __init__.py  twitter.py
sopel_twitter/: __init__.py
tests/: test_twitter.py
