[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_twitter", "sopel_twitter.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-twitter"
version = "1.4.0"
description = "A Twitter plugin for Sopel"

authors = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = "EFL-2.0"
license-files = ["COPYING"]
dynamic = ["readme"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.9, <4"
dependencies = [
    "sopel>=8,<9",
    "tweety-ns~=2.2",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-twitter"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-twitter/issues"

[project.entry-points."sopel.plugins"]
"twitter" = "sopel_twitter"
