[metadata]
name = sopel-twitter
version = 1.3.0
description = A Twitter plugin for Sopel
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/sopel-irc/sopel-twitter
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1,<9
    tweety-ns~=0.9.0

[options.entry_points]
sopel.plugins =
    twitter = sopel_twitter
